--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>معاذ - لوحة تحكم الأطباء</title>
+    <title>موعدك - لوحة التحكم</title>
     <link rel="manifest" href="manifest.json" />
 
     <!-- Firebase SDK -->
